Implement native P2Pool miner client (Phase 3)
- Added src/p2pool_client.cpp and src/p2pool_client.h for P2Pool communication
- Updated src/miner.cpp to include P2PoolMiner and integrate with BitcoinMiner
- Added -p2poolurl and -p2pooladdress command-line options in src/init.cpp
- Updated src/Makefile.am to include new source files
- Implemented basic get_share_template and submit_share logic

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -394,6 +394,8 @@ libbitcoin_server_a_SOURCES = \
   hw/dmi/DmiTools.cpp \
   miner.cpp \
   net.cpp \
+  p2pool_client.cpp \
+  p2pool_client.h \
   noui.cpp \
   numa_helper.cpp \
   policy/policy.cpp \
