Add P2Pool mining mode controls with progress tracking
Implements comprehensive P2Pool integration with dual control interfaces
(terminal UI 'O' key and RPC commands) for seamless pool mining.

Features:
- Process management: automatic start/stop/monitor/restart of P2Pool binary
- Auto-start: P2Pool automatically starts on daemon restart if previously enabled
- Crash recovery: exponential backoff auto-restart (max 5 attempts)
- RPC interface: setp2poolmode command and extended getmininginfo output
- Terminal UI: 'O' keyboard toggle and detailed status display
- Progress tracking: estimated time to next share/block with progress %
- Pool effort display: color-coded (green/yellow/red) effort percentage
- Status monitoring: connection status, connected miners count, pool hashrate
- Health checks: dual-layer PID and HTTP endpoint monitoring

Implementation:
- P2PoolProcessManager: singleton for process lifecycle management
- P2PoolStatusMonitor: HTTP polling with 5-second caching
- Terminal metrics: ANSI color-coded status with time estimates
- Configuration: -p2poolautostart, -p2poolbinary, -p2poollightmode flags
- Build system: integrated P2Pool submodule build

Bug fixes:
- Fixed duplicate symbol errors in support/events.h with inline keywords
- Fixed missing static constant definitions in P2PoolProcessManager

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -396,6 +396,10 @@ libbitcoin_server_a_SOURCES = \
   net.cpp \
   p2pool_client.cpp \
   p2pool_client.h \
+  p2pool_manager.cpp \
+  p2pool_manager.h \
+  p2pool_status.cpp \
+  p2pool_status.h \
   noui.cpp \
   numa_helper.cpp \
   policy/policy.cpp \
