fix: Correct P2Pool binary build configuration in Makefile.am
Remove incorrect bin_PROGRAMS declaration for junocash-p2pool and restore
missing copy command in p2pool-build target.

Problem:
The line "bin_PROGRAMS += junocash-p2pool" told automake to compile
junocash-p2pool from source, but no source files were defined. This caused
automake to look for a default "junocash-p2pool.c" file which doesn't exist,
resulting in build failure:
  make[3]: *** No rule to make target 'junocash-p2pool.c'

Solution:
1. Remove "bin_PROGRAMS += junocash-p2pool" - this binary is built via the
   p2pool submodule using CMake, not as a regular automake program
2. Add missing "cp p2pool/build/p2pool $(top_builddir)/src/junocash-p2pool"
   to the p2pool-build target to copy the built binary to the correct location

The junocash-p2pool binary is built by the custom p2pool-build target which:
- Updates the p2pool git submodule
- Builds p2pool using CMake
- Copies the resulting binary to src/junocash-p2pool

This is the correct approach for integrating externally-built binaries.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -206,10 +206,6 @@ if BUILD_BITCOIND
   bin_PROGRAMS += junocashd
 endif
 
-if ENABLE_MINING
-  bin_PROGRAMS += junocash-p2pool
-endif
-
 if BUILD_BITCOIN_UTILS
   bin_PROGRAMS += junocash-cli junocash-tx
   bin_SCRIPTS += $(WALLET_TOOL_BIN)
@@ -964,3 +960,4 @@ p2pool-build:
 	@echo "Building P2Pool..."
 	cd p2pool && git submodule update --init --recursive
 	cd p2pool && mkdir -p build && cd build && cmake .. -DWITH_RANDOMX=OFF && $(MAKE)
+	cp p2pool/build/p2pool $(top_builddir)/src/junocash-p2pool
