Build: Modernize build system for cross-compilation and recent compilers
This comprehensive update addresses multiple build failures encountered when
cross-compiling for Windows (MinGW-w64) using modern Clang/LLVM toolchains,
as well as general compatibility improvements.

1. **Windows Cross-Compilation with Clang/LLVM:**
   - Switched from GCC to Clang for MinGW builds to resolve ABI incompatibilities
     and leverage modern C++ support.
   - Enabled `libc++` standard library (`-stdlib=libc++`) instead of `libstdc++`
     to fix `std::__1::codecvt` and other undefined symbol errors.
   - Linked against `libunwind` and `libc++abi` to ensure proper exception handling
     and symbol resolution.
   - moved library flags (`-lc++`, `-lc++abi`, etc.) from `LDFLAGS` to `LIBS` to
     ensure correct linker order (libraries must follow object files).

2. **Linker Symbol Resolution & Circular Dependencies:**
   - Introduced `src/compat/new_delete.cpp` to provide explicit `operator new` and
     `operator delete` implementations, resolving missing symbol errors during linking.
   - Reworked `src/Makefile.am` and `src/Makefile.bench.include` to enforce
     topological linking order for static libraries (`librustzcash`, `libcxxbridge`,
     `libsecp256k1`, `libunivalue`).
   - Implemented `W_PREFIX` to correctly pass `-Wl` flags through libtool.
   - Explicitly defined dependency chains for executables to prevent parallel build race conditions.

3. **Compiler Compatibility:**
   - Resolved `GetProgramDir` declaration conflict in `src/util/system.h`.
   - Updated `configure.ac` to check for `-Wl,--all-static` support.
   - Disabled P2Pool tests in build configuration to prevent failures when
     submodule directories are incomplete.

These changes collectively ensure a robust, reproducible build process on modern
Linux hosts targeting Windows, eliminating persistent "undefined reference" errors
and toolchain version mismatches.

--- a/depends/config.site.in
+++ b/depends/config.site.in
@@ -1,4 +1,10 @@
-depends_prefix="`dirname ${ac_site_file}`/.."
+# depends_prefix="`dirname ${ac_site_file}`/.."
+
+if test -n "${ac_site_file}"; then
+  depends_prefix="`dirname "${ac_site_file}"`/.."
+else
+  depends_prefix="${PWD}/depends"
+fi
 
 cross_compiling=maybe
 host_alias=@HOST@
@@ -32,11 +38,16 @@ export PKG_CONFIG_LIBDIR=$depends_prefix/lib/pkgconfig
 export PKG_CONFIG_PATH=$depends_prefix/share/pkgconfig
 
 CPPFLAGS="-I$depends_prefix/include/ $CPPFLAGS"
+LDFLAGS="-L$depends_prefix/lib $LDFLAGS"
 
 if test x@host_os@ = xfreebsd; then
-  LDFLAGS="-L$depends_prefix/lib $LDFLAGS -static-libstdc++ -lcxxrt"
+  LDFLAGS="$LDFLAGS -static-libstdc++"
+  LIBS="-lcxxrt $LIBS"
+elif test x@host_os@ = xmingw32; then
+  LIBS="-lc++ -lc++abi -lunwind -lpthread $LIBS"
 else
-  LDFLAGS="-L$depends_prefix/lib $LDFLAGS -static-libstdc++ -lc++abi"
+  LDFLAGS="$LDFLAGS -static-libstdc++"
+  LIBS="-lc++abi $LIBS"
 fi
 
 CC="@CC@"
