--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/juno-p2pool"]
 	path = src/juno-p2pool
-	url = https://github.com/TyphooN-/juno-p2pool.git
+	url = git@github.com:TyphooN-/juno-p2pool.git
